apps/base/organisers/sonarr/ingressroute-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-tls
spec:
  entryPoints:
    - websecure
  routes: # TODO Set api with no auth
    - kind: Rule
      match: Host(`sonarr.${CLUSTER_DOMAIN}`) # TODO Replace with variable
      services:
        - name: sonarr
          port: 8989
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
    - kind: Rule
      match: Host(`sonarr.${CLUSTER_DOMAIN}`) && PathPrefix(`/api`)
      services:
        - name: sonarr
          port: 8989
  tls:
    certResolver: cloudflare
